feat: add panorama contract
